                                                         -*- coding: utf-8 -*-
Changes with Apache Traffic Server 4.1.1

  *) [TS-2341] Cast TSHttpStatus to int to suppress compiler warning in clang

  *) [TS-2303] Incorrect docs for negative_caching_enabled.
    Author: Thomas Jackson <jacksontj.89@gmail.com>

Changes with Apache Traffic Server 4.1.0 (was not released)

  *) [TS-2252] Fix bison version check on Ubuntu.

  *) [TS-2108] Fix TSConfig to build with bison 3.0

  *) [TS-2311] ESI: Support responses that are of other text content type as well as non-200 status response.
   Author: Kit Chan

  *) [TS-2321] C++ API: Clean up header code to not use STL containers and use structures directly

  *) [TS-2323] Implement a .include directive for remap.config.

  *) [TS-2322] Set PCRE malloc hooks globally.

  *) [TS-1955] Range: requests during read-while-writer gets the wrong
  Content-Length.

  *) [TS-2245] This adds a '2' config state to the ignore mismatch configs.

  *) [TS-2178] Force keep alive off if re-using client 4-tuple and server is
  not keep alive.

  *) [TS-2264] Fixed problem with EADDR_NOTAVAIL handling.

  *) [TS-2317] Read/write mutex of PluginVC may be held without release.
   Author: portl4t.cn@gmail.com

  *) [TS-2315] ESI Plugin: fetcher does not handle error gracefully.
   Author: Kit Chan.

  *) [TS-2115] buffer_upload hard-codes "nobody" user/group.
   Author: Kit Chan.

  *) [TS-2208] Cache control with multiple suffixes.
    Author: bettydramit <b13621367396@gmail.com>

  *) [TS-2247] ua close time in milestone may not set.
   Author: Gang Li

  *) [TS-2302] Log collation causes error logging to stop.

  *) [TS-2200] TS_HRTIME_xxx in experimental.h is invalid to use.
   Author: Yu Qing

  *) [TS-2235] url_print should NOT output "?" for empty query string.
   Author: Yu Qing

  *) [TS-2292] the version of records.config increases unexpectly.
   Author: Yu Qing

  *) [TS-2277] cluster alarm messages broadcast infinitely.