@@ -1,6 +1,9 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache Traffic Server 4.1.1
 
+  *) [TS-2333] Change the SAX callbacks to not clash with libxml2, which broke
+   synthetic metric completely.
+
   *) [TS-2341] Cast TSHttpStatus to int to suppress compiler warning in clang
 
   *) [TS-2303] Incorrect docs for negative_caching_enabled.
